--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "request": "~2.36.0",
     "cheerio": "~0.17.0",
     "nodemailer": "~0.6.5"
+  },
+  "devDependencies": {
+    "napa": "~0.4.1"
+  },
+  "scripts": {
+    "install": "napa flesler/jquery.scrollTo:scrollto shramov/leaflet-plugins"
   }
 }
