--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "jquery": "~2.1.1",
-    "leaflet": "~0.7.3",
     "routie": "git://github.com/jgallen23/routie",
     "async": "~0.9.0",
     "mustache": "~0.8.2",
@@ -17,6 +16,6 @@
     "napa": "~0.4.1"
   },
   "scripts": {
-    "install": "napa flesler/jquery.scrollTo:scrollto shramov/leaflet-plugins"
+    "install": "napa flesler/jquery.scrollTo:scrollto shramov/leaflet-plugins Leaflet/Leaflet#stable:leaflet"
   }
 }
