fixed package.json 2

--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "request": "~2.36.0",
     "cheerio": "~0.17.0",
     "nodemailer": "~0.6.5",
-    "leaflet": "~0.7.3"
-  },
-  "devDependencies": {
-    "napa": "~0.4.1"
-  },
-  "scripts": {
-    "install": "napa shramov/leaflet-plugins"
+    "leaflet": "~0.7.3",
+    "leaflet-plugins": "~1.2.0"
   }
 }
